feat(v0.2.0): Nimbus swap, AAP + admin AI/MCP clients, Spring-native integration
Replaces com.auth0:java-jwt + jwks-rsa with a single com.nimbusds:nimbus-jose-jwt
dependency. TokenVerifier rebuilt on Nimbus' DefaultJWTProcessor + JWKSourceBuilder
with lazy JWKS fetch; AuthFIClaims drops the DecodedJWT leak in favor of a plain
Map<String, Object> for raw claims so the API surface is JWT-lib-neutral.

New client classes — wraps every endpoint a customer app or AI agent actually needs
against the AuthFI platform:

Management (service auth):
- MeClient, SessionsClient, MFAClient — end-user self-service via Bearer JWT
- AuditLogsClient — paginated /manage/v1/{tenant}/logs
- InvitationsClient — stub; backend routes deferred
- AIAgentRegistryClient, AIRunsClient (+taint/restore/revoke), MCPToolsClient, MCPCallsClient

Public:
- TokenIntrospectionClient — RFC 7662 + RFC 7009
- DiscoveryClient — /.well-known/{openid-configuration, jwks, smart-configuration, agent-auth}

AuthFI Agent Protocol (AAP):
- AgentsClient — owner-driven /v1/{tenant}/agents/register
- MyAgentsClient — end-user portal /v1/{tenant}/me/agents/*
- AgentAuthClient — seamless agentic surface: token cache, can(), guard(),
  awaitDecision() with exp-backoff polling, sealed Approval result types

New AuthFI.agent() builder + AGENT_CREDENTIALS auth mode. fromEnv() reads
AUTHFI_TENANT / AUTHFI_AGENT_ID / AUTHFI_AGENT_SECRET. HttpTransport gains
agent-token cache (mirrors the existing client_credentials pattern), per-request
user-Bearer transport (getAsUser/postAsUser/deleteAsUser), anonymous transport
(getAnonymous/formPostAnonymous), and agent-context transport.

Spring-native integration — uses existing Spring vocab, no new annotations:
- AuthFIJwtAuthenticationConverter maps permissions[]/roles[] JWT claims to
  Spring Security GrantedAuthority (no SCOPE_ prefix on permissions; ROLE_ on roles).
  @PreAuthorize("hasAuthority('read:users')") works against AuthFI tokens verbatim.
- PreAuthorizeScanner walks ever